--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -144,14 +144,29 @@
   <data name="Tip_Cancel" xml:space="preserve">
     <value>取消</value>
   </data>
+  <data name="Tip_Category" xml:space="preserve">
+    <value>分类</value>
+  </data>
   <data name="Tip_Confirm" xml:space="preserve">
     <value>确认</value>
+  </data>
+  <data name="Tip_DefaultShelf" xml:space="preserve">
+    <value>默认书架</value>
+  </data>
+  <data name="Tip_EndBooks" xml:space="preserve">
+    <value>完本</value>
   </data>
   <data name="Tip_GetUserFailed" xml:space="preserve">
     <value>获取用户失败</value>
   </data>
   <data name="Tip_OneDriveLogoutWarning" xml:space="preserve">
     <value>您是否要退出OneDrive？退出后本地阅读记录将不会同步</value>
+  </data>
+  <data name="Tip_Rank" xml:space="preserve">
+    <value>榜单</value>
+  </data>
+  <data name="Tip_Topic" xml:space="preserve">
+    <value>专题</value>
   </data>
   <data name="Tip_UpdateTitle" xml:space="preserve">
     <value>更新说明</value>
