--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -168,6 +168,9 @@
   <data name="Tip_Rank" xml:space="preserve">
     <value>榜单</value>
   </data>
+  <data name="Tip_RepeatBook" xml:space="preserve">
+    <value>已包含重复书籍</value>
+  </data>
   <data name="Tip_Setting" xml:space="preserve">
     <value>设置</value>
   </data>
