--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -126,11 +126,17 @@
   <data name="Control_AppSearchBox.PlaceholderText" xml:space="preserve">
     <value>查找书籍</value>
   </data>
+  <data name="Control_ImportBookButton.Content" xml:space="preserve">
+    <value>导入书籍</value>
+  </data>
   <data name="Control_ImportBookTipBlock.Text" xml:space="preserve">
     <value>导入书籍</value>
   </data>
   <data name="Control_LastestReadTipBlock.Text" xml:space="preserve">
     <value>最近阅读</value>
+  </data>
+  <data name="Control_NeedOpenBookTipBlock.Text" xml:space="preserve">
+    <value>书架空空如也，快打开一本书阅读吧~</value>
   </data>
   <data name="Control_SearchFromWeb.Text" xml:space="preserve">
     <value>在书城中查询</value>
@@ -176,6 +182,9 @@
   </data>
   <data name="Tip_Shelf" xml:space="preserve">
     <value>书架</value>
+  </data>
+  <data name="Tip_ShelfSelection" xml:space="preserve">
+    <value>选择一个书架</value>
   </data>
   <data name="Tip_Topic" xml:space="preserve">
     <value>专题</value>
