--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -237,6 +237,9 @@
   <data name="Tip_DefaultShelf" xml:space="preserve">
     <value>默认书架</value>
   </data>
+  <data name="Tip_Delete" xml:space="preserve">
+    <value>删除</value>
+  </data>
   <data name="Tip_Discovery" xml:space="preserve">
     <value>发现</value>
   </data>
@@ -248,6 +251,9 @@
   </data>
   <data name="Tip_ManageShelf" xml:space="preserve">
     <value>管理书架</value>
+  </data>
+  <data name="Tip_Move" xml:space="preserve">
+    <value>转移</value>
   </data>
   <data name="Tip_NeedLogin" xml:space="preserve">
     <value>未登录</value>
@@ -264,8 +270,17 @@
   <data name="Tip_Rank" xml:space="preserve">
     <value>榜单</value>
   </data>
+  <data name="Tip_Remove" xml:space="preserve">
+    <value>移除</value>
+  </data>
+  <data name="Tip_RemoveBookWarning" xml:space="preserve">
+    <value>您是否要移除该书籍？移除后该书籍会从当前书架中删除。倘若是本地书籍，则不会影响到实际的文件</value>
+  </data>
   <data name="Tip_RepeatBook" xml:space="preserve">
     <value>已包含重复书籍</value>
+  </data>
+  <data name="Tip_SearchResult" xml:space="preserve">
+    <value>搜索结果</value>
   </data>
   <data name="Tip_Setting" xml:space="preserve">
     <value>设置</value>
@@ -278,6 +293,9 @@
   </data>
   <data name="Tip_Topic" xml:space="preserve">
     <value>专题</value>
+  </data>
+  <data name="Tip_UpdateChapter" xml:space="preserve">
+    <value>更新章节</value>
   </data>
   <data name="Tip_UpdateTitle" xml:space="preserve">
     <value>更新说明</value>
