--- a/Clean-Reader/Language/en-US/Resources.resw
+++ b/Clean-Reader/Language/en-US/Resources.resw
@@ -126,11 +126,23 @@
   <data name="Control_AddSyncAccountTipBlock.Text" xml:space="preserve">
     <value>Add sync account</value>
   </data>
+  <data name="Control_AppFontComboBox.Header" xml:space="preserve">
+    <value>App font family</value>
+  </data>
   <data name="Control_AppSearchBox.PlaceholderText" xml:space="preserve">
     <value>Find books</value>
   </data>
   <data name="Control_BackgroundTipBlock.Text" xml:space="preserve">
     <value>Background</value>
+  </data>
+  <data name="Control_BaiduComboBoxItem.Content" xml:space="preserve">
+    <value>Baidu</value>
+  </data>
+  <data name="Control_BasicFontSizeBox.Header" xml:space="preserve">
+    <value>Basic font size (Need restart)</value>
+  </data>
+  <data name="Control_BingComboBoxItem.Content" xml:space="preserve">
+    <value>Bing</value>
   </data>
   <data name="Control_CategoryTipBlock.Text" xml:space="preserve">
     <value>Categories</value>
@@ -150,6 +162,9 @@
   <data name="Control_ConnectFailedBlock.Description" xml:space="preserve">
     <value>The server is not responding~ Please check the network connection and try again</value>
   </data>
+  <data name="Control_DarkComboBoxItem.Content" xml:space="preserve">
+    <value>Dark</value>
+  </data>
   <data name="Control_EndComboItem.Content" xml:space="preserve">
     <value>Finish</value>
   </data>
@@ -165,6 +180,9 @@
   <data name="Control_ForegroundTipBlock.Text" xml:space="preserve">
     <value>Foreground (text)</value>
   </data>
+  <data name="Control_GoogleComboBoxItem.Content" xml:space="preserve">
+    <value>Google</value>
+  </data>
   <data name="Control_HotComboItem.Content" xml:space="preserve">
     <value>Hot</value>
   </data>
@@ -174,8 +192,14 @@
   <data name="Control_IsAcrylicBackgroundCheckBox.Content" xml:space="preserve">
     <value>Acrylic background</value>
   </data>
+  <data name="Control_LanguageComboBox.Header" xml:space="preserve">
+    <value>Language</value>
+  </data>
   <data name="Control_LastestReadTipBlock.Text" xml:space="preserve">
     <value>Recently Read</value>
+  </data>
+  <data name="Control_LightComboBoxItem.Content" xml:space="preserve">
+    <value>Light</value>
   </data>
   <data name="Control_LineHeightSlider.Header" xml:space="preserve">
     <value>Line height</value>
@@ -192,6 +216,9 @@
   <data name="Control_RecommendGridView.Header" xml:space="preserve">
     <value>Recommend books</value>
   </data>
+  <data name="Control_SearchEngineComboBox.Header" xml:space="preserve">
+    <value>Default search engine</value>
+  </data>
   <data name="Control_SearchFromWeb.Text" xml:space="preserve">
     <value>Search in Bookstore</value>
   </data>
@@ -207,8 +234,14 @@
   <data name="Control_TextIndentSlider.Header" xml:space="preserve">
     <value>Text indent</value>
   </data>
+  <data name="Control_ThemeComboBox.Header" xml:space="preserve">
+    <value>Theme</value>
+  </data>
   <data name="Control_TypeSettingTipBlock.Text" xml:space="preserve">
     <value>Typesetting</value>
+  </data>
+  <data name="Control_WithSystemComboBoxItem.Content" xml:space="preserve">
+    <value>System</value>
   </data>
   <data name="Tip_AddShelf" xml:space="preserve">
     <value>Add bookshelf</value>
@@ -251,6 +284,9 @@
   </data>
   <data name="Tip_NeedLogin" xml:space="preserve">
     <value>Need Login</value>
+  </data>
+  <data name="Tip_NeedRestart" xml:space="preserve">
+    <value>You have changed the static resources and you will get a better experience after restarting. Do you want to restart the application?</value>
   </data>
   <data name="Tip_OneDriveLogoutWarning" xml:space="preserve">
     <value>Do you want to log out of OneDrive? Local reading records will not be synchronized after exiting</value>
