--- a/Clean-Reader/Language/en-US/Resources.resw
+++ b/Clean-Reader/Language/en-US/Resources.resw
@@ -246,6 +246,9 @@
   <data name="Tip_AddShelf" xml:space="preserve">
     <value>Add bookshelf</value>
   </data>
+  <data name="Tip_AddSuccess" xml:space="preserve">
+    <value>Book added</value>
+  </data>
   <data name="Tip_AddToShelf" xml:space="preserve">
     <value>Add to bookshelf</value>
   </data>
@@ -278,6 +281,9 @@
   </data>
   <data name="Tip_GetUserFailed" xml:space="preserve">
     <value>Failed to acquire user</value>
+  </data>
+  <data name="Tip_LoadingChapter" xml:space="preserve">
+    <value>Syncing chapters</value>
   </data>
   <data name="Tip_ManageShelf" xml:space="preserve">
     <value>Manage bookshelves</value>
