--- a/Clean-Reader/Language/en-US/Resources.resw
+++ b/Clean-Reader/Language/en-US/Resources.resw
@@ -210,6 +210,9 @@
   <data name="Control_NewestComboItem.Content" xml:space="preserve">
     <value>Newest</value>
   </data>
+  <data name="Control_NoBookBlock.Description" xml:space="preserve">
+    <value>No books</value>
+  </data>
   <data name="Control_RankTipBlock.Text" xml:space="preserve">
     <value>Rank</value>
   </data>
@@ -224,6 +227,9 @@
   </data>
   <data name="Control_SegmentSpacingSlider.Header" xml:space="preserve">
     <value>Segment spacing</value>
+  </data>
+  <data name="Control_ShelfNameBox.Header" xml:space="preserve">
+    <value>Shelf name</value>
   </data>
   <data name="Control_ShelfNoDataBlock.ButtonText" xml:space="preserve">
     <value>Import Books</value>
@@ -273,11 +279,17 @@
   <data name="Tip_DefaultShelf" xml:space="preserve">
     <value>Default Shelf</value>
   </data>
+  <data name="Tip_DefaultShelfManageWarning" xml:space="preserve">
+    <value>Please switch to a custom bookshelf and manage the books</value>
+  </data>
   <data name="Tip_Discovery" xml:space="preserve">
     <value>Discovery</value>
   </data>
   <data name="Tip_EndBooks" xml:space="preserve">
     <value>Finished Novel</value>
+  </data>
+  <data name="Tip_FieldEmpty" xml:space="preserve">
+    <value>Some fields are empty</value>
   </data>
   <data name="Tip_GetUserFailed" xml:space="preserve">
     <value>Failed to acquire user</value>
@@ -321,11 +333,20 @@
   <data name="Tip_Shelf" xml:space="preserve">
     <value>Shelf</value>
   </data>
+  <data name="Tip_ShelfBookList" xml:space="preserve">
+    <value>List of books in the shelf</value>
+  </data>
+  <data name="Tip_ShelfNameRepeat" xml:space="preserve">
+    <value>Duplicate bookshelf name</value>
+  </data>
   <data name="Tip_ShelfSelection" xml:space="preserve">
     <value>Choose a bookshelf</value>
   </data>
   <data name="Tip_Topic" xml:space="preserve">
     <value>Topic</value>
+  </data>
+  <data name="Tip_UncateBookList" xml:space="preserve">
+    <value>List of Uncategorized Books</value>
   </data>
   <data name="Tip_UpdateTitle" xml:space="preserve">
     <value>Update Information</value>
