--- a/Clean-Reader/Language/zh-CN/Resources.resw
+++ b/Clean-Reader/Language/zh-CN/Resources.resw
@@ -210,6 +210,9 @@
   <data name="Control_NewestComboItem.Content" xml:space="preserve">
     <value>最新</value>
   </data>
+  <data name="Control_NoBookBlock.Description" xml:space="preserve">
+    <value>暂无书籍</value>
+  </data>
   <data name="Control_RankTipBlock.Text" xml:space="preserve">
     <value>榜单</value>
   </data>
@@ -224,6 +227,9 @@
   </data>
   <data name="Control_SegmentSpacingSlider.Header" xml:space="preserve">
     <value>段间距</value>
+  </data>
+  <data name="Control_ShelfNameBox.Header" xml:space="preserve">
+    <value>书架名</value>
   </data>
   <data name="Control_ShelfNoDataBlock.ButtonText" xml:space="preserve">
     <value>导入书籍</value>
@@ -273,6 +279,9 @@
   <data name="Tip_DefaultShelf" xml:space="preserve">
     <value>默认书架</value>
   </data>
+  <data name="Tip_DefaultShelfManageWarning" xml:space="preserve">
+    <value>请切换为自定义书架再管理其中书籍</value>
+  </data>
   <data name="Tip_Delete" xml:space="preserve">
     <value>删除</value>
   </data>
@@ -281,6 +290,9 @@
   </data>
   <data name="Tip_EndBooks" xml:space="preserve">
     <value>完本</value>
+  </data>
+  <data name="Tip_FieldEmpty" xml:space="preserve">
+    <value>有字段为空</value>
   </data>
   <data name="Tip_GetUserFailed" xml:space="preserve">
     <value>获取用户失败</value>
@@ -330,11 +342,20 @@
   <data name="Tip_Shelf" xml:space="preserve">
     <value>书架</value>
   </data>
+  <data name="Tip_ShelfBookList" xml:space="preserve">
+    <value>书架内书籍列表</value>
+  </data>
+  <data name="Tip_ShelfNameRepeat" xml:space="preserve">
+    <value>书架名重复</value>
+  </data>
   <data name="Tip_ShelfSelection" xml:space="preserve">
     <value>选择一个书架</value>
   </data>
   <data name="Tip_Topic" xml:space="preserve">
     <value>专题</value>
+  </data>
+  <data name="Tip_UncateBookList" xml:space="preserve">
+    <value>未分类书籍列表</value>
   </data>
   <data name="Tip_UpdateChapter" xml:space="preserve">
     <value>更新章节</value>
